# logging_util

./: CMakeLists.txt  README.md  example.cpp
src/: CMakeLists.txt  logger.cpp  logger.hpp
